--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <!--viewport-->
-    <title>идеальный мазагин</title>
+    <title>my store</title>
 </head>
 <body>
 
