--- a/index.html
+++ b/index.html
@@ -4,15 +4,31 @@
     <meta charset="UTF-8">
     <!--viewport-->
     <title>my store</title>
+    <link href="styles.css" rel="stylesheet">
+
 </head>
 <body>
 
 <!-- navigation -->
-<ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="catalog.html">Catalog</a></li>
-    <li><a href="contacts.html">Contacts</a></li>
-</ul>
+
+<div class="navbar" id="navbar">
+    <div class="navbar-brand">
+        <span class="text-dark text-uppercase font-weight-bold">Peculiar My Store</span>
+    </div>
+
+    <ul class="navbar-nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="catalog.html">Catalog</a></li>
+        <li><a href="contacts.html">Contacts</a></li>
+    </ul>
+
+    <ul class="navbar-tool">
+        <li><a href="#"><i class="fas fa-shopping-cart">Shopping cart</i></a></li>
+        <li><a href="#"><i class= "far fa-thumbs-up">Likes</i></a></li>
+        <li><a href="#"><i class="fas fa-sign-in-alt">Login</i></a></li>
+    </ul>
+</div>
+
 <!-- slider -->
 <!-- header -->
 <p>тут что-то будет</p>
@@ -20,10 +36,25 @@
 
 <!-- carousel -->
 <!-- header -->
+
 <p>что-то тоже тут будет</p>
 <h1>top products</h1>
-
 <!-- catalog -->
+<div>
+    <img src="">
+    <div>
+        <ul>
+            <li><a href=""><i class="far fa-thumbs-up">Like</i></a> </li>
+            <li><a href="" class="bnt btn-dark"><i class= "fas fa-cart-plus"></i>Add to cart</a> </li>
+            <li><a href=""><i class="fas fa-info-circle">Details</i></a> </li>
+        </ul>
+    </div>
+    <h3>Test product</h3>
+    <p>$17</p>
+
+</div>
+
+
 <!-- servises -->
 <!-- subscibe -->
 <!-- footer -->
