--- a/index.html
+++ b/index.html
@@ -10,53 +10,95 @@
 <body>
 
 <!-- navigation -->
+<header class="bg-white">
+    <nav id="nav">
+        <div class="navbar" id="navbar">
+            <div class="navbar-brand">
+                <span class="text-dark text-uppercase font-weight-bold">Peculiar My Store</span>
+            </div>
 
-<div class="navbar" id="navbar">
-    <div class="navbar-brand">
-        <span class="text-dark text-uppercase font-weight-bold">Peculiar My Store</span>
-    </div>
+            <ul class="navbar-nav">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="catalog.html">Catalog</a></li>
+                <li><a href="contacts.html">Contacts</a></li>
+            </ul>
 
-    <ul class="navbar-nav">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="catalog.html">Catalog</a></li>
-        <li><a href="contacts.html">Contacts</a></li>
-    </ul>
-
-    <ul class="navbar-tool">
-        <li><a href="#"><i class="fas fa-shopping-cart">Shopping cart</i></a></li>
-        <li><a href="#"><i class= "far fa-thumbs-up">Likes</i></a></li>
-        <li><a href="#"><i class="fas fa-sign-in-alt">Login</i></a></li>
-    </ul>
-</div>
+            <ul class="navbar-tool">
+                <li><a href="#"><i class="fas fa-shopping-cart">Shopping cart</i></a></li>
+                <li><a href="#"><i class="far fa-thumbs-up">Likes</i></a></li>
+                <li><a href="#"><i class="fas fa-sign-in-alt">Login</i></a></li>
+            </ul>
+        </div>
+    </nav>
+</header>
 
 <!-- slider -->
-<!-- header -->
-<p>тут что-то будет</p>
-<h2>brows our categories</h2>
+<section class="hero">
+    <article>
+        <header>
+            <p>Promo Text</p>
+            <h1>Slogan</h1>
+            <a class="btn btn-dark">Browse collection</a>
+        </header>
+    </article>
+</section>
 
-<!-- carousel -->
-<!-- header -->
+<div class="container">
+    <section class="bg-gray my-3">
+        <header>
+            <!-- header -->
+            <p>тут что-то будет</p>
+            <h2>brows our categories</h2>
+        </header>
+        <!-- carousel -->
 
-<p>что-то тоже тут будет</p>
-<h1>top products</h1>
-<!-- catalog -->
-<div>
-    <img src="">
-    <div>
-        <ul>
-            <li><a href=""><i class="far fa-thumbs-up">Like</i></a> </li>
-            <li><a href="" class="bnt btn-dark"><i class= "fas fa-cart-plus"></i>Add to cart</a> </li>
-            <li><a href=""><i class="fas fa-info-circle">Details</i></a> </li>
-        </ul>
-    </div>
-    <h3>Test product</h3>
-    <p>$17</p>
 
+    </section>
+
+    <section>
+        <header>
+            <!-- header -->
+
+            <p>что-то тоже тут будет</p>
+            <h1>top products</h1>
+            <img src="img/2.jpg">
+
+            <!-- catalog -->
+            <div>
+                <img src="img/2.jpg">
+                <div>
+                    <ul>
+                        <li><a href=""><i class="far fa-thumbs-up">Like</i></a></li>
+                        <li><a href="" class="bnt btn-dark"><i class="fas fa-cart-plus"></i>Add to cart</a></li>
+                        <li><a href=""><i class="fas fa-info-circle">Details</i></a></li>
+                    </ul>
+                </div>
+                <h3>Test product</h3>
+                <p>$17</p>
+
+            </div>
+        </header>
+    </section>
+
+    <!-- servises -->
+    <section>
+        <header>
+
+        </header>
+    </section>
+
+    <!-- subscibe -->
+    <section>
+        <header>
+
+        </header>
+    </section>
 </div>
 
-
-<!-- servises -->
-<!-- subscibe -->
 <!-- footer -->
+<footer class="footer">
+    <p>&COPY;2020 All rights reserved.</p>
+</footer>
+
 </body>
 </html>
