--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!--viewport-->
     <title>my store</title>
     <link href="styles.css" rel="stylesheet">
+    <link href="variables.css" rel="stylesheet">
 
 </head>
 <body>
@@ -55,12 +56,12 @@
 
     </section>
 
-    <section>
+    <section class="py-5">
         <header>
             <!-- header -->
 
-            <p>что-то тоже тут будет</p>
-            <h1>top products</h1>
+            <p class="text-muted text-uppercase mb-1">что-то тоже тут будет</p>
+            <h1 class="text-uppercase mb-4">top products</h1>
             <img src="img/2.jpg">
 
             <!-- catalog -->
@@ -81,11 +82,34 @@
     </section>
 
     <!-- servises -->
-    <section>
-        <header>
+    <section class="py-5 bg-gray">
+        <div class="row">
+            <div class="col-4 float-left">
+                <header>
+                    <i class="far fa-heard"></i>
+                    <h2>Free shipping</h2>
+                    <p>Free shipping worldwide</p>
+                </header>
+            </div>
 
-        </header>
+            <div class="col-4 float-left">
+                <header>
+                    <i class="far fa-heard"></i>
+                    <h2>Free shipping</h2>
+                    <p>Free shipping worldwide</p>
+                </header>
+            </div>
+
+            <div class="col-4 float-right">
+                <header>
+                    <i class="far fa-heard"></i>
+                    <h2>Free shipping</h2>
+                    <p>Free shipping worldwide</p>
+                </header>
+            </div>
+        </div>
     </section>
+    <div class="clearfix"></div>
 
     <!-- subscibe -->
     <section>
