--- a/index.html
+++ b/index.html
@@ -60,22 +60,128 @@
         <header>
             <!-- header -->
 
-            <p class="text-muted text-uppercase mb-1">что-то тоже тут будет</p>
+            <p class="text-muted text-uppercase mb-1">заголовок</p>
             <h1 class="text-uppercase mb-4">top products</h1>
-            <img src="img/2.jpg">
+            <!--            <img src="img/2.jpg">-->
 
-            <!-- catalog -->
-            <div>
-                <img src="img/2.jpg">
-                <div>
-                    <ul>
-                        <li><a href=""><i class="far fa-thumbs-up">Like</i></a></li>
-                        <li><a href="" class="bnt btn-dark"><i class="fas fa-cart-plus"></i>Add to cart</a></li>
-                        <li><a href=""><i class="fas fa-info-circle">Details</i></a></li>
-                    </ul>
+            <div class="row">
+                <!-- catalog -->
+
+                <div class="product col col-3 text-center">
+                    <div>
+                        <img src="img/2.jpg" class="img-fluid">
+                        <div class="text-center">
+                            <ul class="list-inline">
+                                <li class="list-inline-item">
+                                    <a href="" class="bnt btn-sm">
+                                        <i class="far fa-thumbs-up"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="" class="bnt btn-sm">
+                                        <i class="fas fa-cart-arrow-down"></i>
+                                    </a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="" class="bnt btn-sm">
+                                        <i class="fas fa-expand"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <h3>Test product</h3>
+                    <p class="text-muted">$17</p>
                 </div>
-                <h3>Test product</h3>
-                <p>$17</p>
+
+                <div class="product col col-3 text-center">
+                    <div class="text-center">
+                        <img src="img/2.jpg" class="img-fluid">
+                        <div>
+                            <ul class="list-inline">
+                                <li class="list-inline-item">
+                                    <a href="" class="bnt btn-sm"><i class="far fa-thumbs-up"></i></a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="" class="bnt btn-sm"><i
+                                            class="fas fa-cart-arrow-down"></i></a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="" class="bnt btn-sm"><i class="fas fa-expand"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <h3>Test product</h3>
+                    <p class="text-muted">$17</p>
+                </div>
+
+                <div class="product col col-3 text-center">
+                    <div class="text-center">
+                        <img src="img/2.jpg" class="img-fluid">
+                        <div>
+                            <ul class="list-inline">
+                                <li class="list-inline-item">
+                                    <a href="" class="bnt btn-sm"><i class="far fa-thumbs-up"></i></a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="" class="bnt btn-sm"><i
+                                            class="fas fa-cart-arrow-down"></i></a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="" class="bnt btn-sm"><i class="fas fa-expand"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <h3>Test product</h3>
+                    <p class="text-muted">$17</p>
+                </div>
+
+                <div class="product col col-3 text-center">
+                    <div class="text-center">
+                        <img src="img/2.jpg" class="img-fluid">
+                        <div>
+                            <ul class="list-inline">
+                                <li class="list-inline-item">
+                                    <a href="" class="bnt btn-sm"><i class="far fa-thumbs-up"></i></a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="" class="bnt btn-sm"><i
+                                            class="fas fa-cart-arrow-down"></i></a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="" class="bnt btn-sm"><i class="fas fa-expand"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <h3>Test product</h3>
+                    <p class="text-muted">$17</p>
+                </div>
+
+                <div class="product col col-3 text-center">
+                    <div class="text-center">
+                        <img src="img/2.jpg" class="img-fluid">
+                        <div>
+                            <ul class="list-inline">
+                                <li class="list-inline-item">
+                                    <a href="" class="bnt btn-sm"><i class="far fa-thumbs-up"></i></a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="" class="bnt btn-sm"><i
+                                            class="fas fa-cart-arrow-down"></i></a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="" class="bnt btn-sm"><i class="fas fa-expand"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <h3>Test product</h3>
+                    <p class="text-muted">$17</p>
+                </div>
+
 
             </div>
         </header>
@@ -107,6 +213,7 @@
                     <p>Free shipping worldwide</p>
                 </header>
             </div>
+
         </div>
     </section>
     <div class="clearfix"></div>
@@ -121,7 +228,15 @@
 
 <!-- footer -->
 <footer class="footer">
-    <p>&COPY;2020 All rights reserved.</p>
+    <div class="container py-4">
+        <div class="row py-5">
+            <div class=""></div>
+
+            <div class="col col-6"></div>
+            <p>&COPY;2020 All rights reserved.</p>
+        </div>
+    </div>
+    </div>
 </footer>
 
 </body>
