--- a/index.html
+++ b/index.html
@@ -34,13 +34,41 @@
 </header>
 
 <!-- slider -->
-<section class="hero">
-    <article>
-        <header>
-            <p>Promo Text</p>
-            <h1>Slogan</h1>
-            <a class="btn btn-dark">Browse collection</a>
-        </header>
+<section class="hero pd-3 d-flex align-items-center">
+    <article class="container slider">
+        <div class="slides">
+            <div class="overflow">
+                <div class="items">
+                    <article class="slide">
+                        <img src="img/2.jpg">
+                        <div class="row px-4 px-lg-6">
+                            <div class="col-lg-6 text-slide">
+                                <p class="text-uppercase">Promo Text</p>
+                                <h1 class="text-uppercase">20% off on new season</h1>
+                                <a class="btn btn-dark">Browse collection</a>
+                            </div>
+                        </div>
+                    </article>
+
+                    <article class="slide">
+                        <img src="img/2.jpg">
+                    </article>
+
+                    <article class="slide">
+                        <img src="img/2.jpg">
+                    </article>
+
+                    <article class="slide">
+                        <img src="img/2.jpg">
+                    </article>
+
+                    <article class="slide">
+                        <img src="img/2.jpg">
+                    </article>
+
+                </div>
+            </div>
+        </div>
     </article>
 </section>
 
@@ -52,7 +80,45 @@
             <h2>brows our categories</h2>
         </header>
         <!-- carousel -->
+<div class="row">
+    <div class="carousel">
+        <div class="carousel-track">
+            <div class="carousel-item">
+                <a href= "" class="category-item">
+                    <img src="img/2.jpg" height="100" width="250">
+                    <strong class="category-item-title">Clothes</strong>
+                </a>
+            </div>
 
+            <div class="carousel-item">
+                <img src="img/2.jpg" height="100" width="250">
+            </div>
+
+            <div class="carousel-item">
+                <img src="img/2.jpg" height="100" width="250">
+            </div>
+
+            <div class="carousel-item">
+                <img src="img/2.jpg" height="100" width="250">
+            </div>
+            <div class="carousel-item">
+                <img src="img/2.jpg" height="100" width="250">
+            </div>
+
+            <div class="carousel-item">
+                <img src="img/2.jpg" height="100" width="250">
+            </div>
+
+            <div class="carousel-item">
+                <img src="img/2.jpg" height="100" width="250">
+            </div>
+
+            <div class="carousel-item">
+                <img src="img/2.jpg" height="100" width="250">
+            </div>
+        </div>
+    </div>
+</div>
 
     </section>
 
