--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>my store</title>
     <link href="styles.css" rel="stylesheet">
     <link href="variables.css" rel="stylesheet">
+    <script src="app.js"></script>
 
 </head>
 <body>
@@ -304,6 +305,8 @@
     </div>
     </div>
 </footer>
+
+
 
 </body>
 </html>
