--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <!--viewport-->
     <title>my store</title>
-    <link href="styles.css" rel="stylesheet">
-    <link href="variables.css" rel="stylesheet">
-    <script src="app.js"></script>
+    <link href="css/styles.css" rel="stylesheet">
+    <link href="css/variables.css" rel="stylesheet">
+    <script src="js/app.js"></script>
 
 </head>
 <body>
