--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 <div class="container py-4">
     <div class="row py-5">
         <div class="col col-12">
-            <h3>Contacts</h3>
+            <h3>About company</h3>
         </div>
     </div>
 
