--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>my store</title>
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/variables.css" rel="stylesheet">
-    <script src="js/app.js"></script>
+
 
 </head>
 <body>
@@ -16,26 +16,40 @@
     <nav id="nav">
         <div class="navbar" id="navbar">
             <div class="navbar-brand">
-                <span class="text-dark text-uppercase font-weight-bold">Peculiar My Store</span>
+                <a href=""><span class="text-dark text-uppercase font-weight-bold">My Store</span></a>
             </div>
 
             <ul class="navbar-nav">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="catalog.html">Catalog</a></li>
+                <li><a href="catalog.html">Shop</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="contacts.html">Contacts</a></li>
             </ul>
 
             <ul class="navbar-tool">
-                <li><a href="#"><i class="fas fa-shopping-cart">Shopping cart</i></a></li>
-                <li><a href="#"><i class="far fa-thumbs-up">Likes</i></a></li>
-                <li><a href="#"><i class="fas fa-sign-in-alt">Login</i></a></li>
+                <li><a href="#" title="Shopping cart"><i class="fas fa-shopping-cart"></i></a></li>
+                <li><a href="#" title="Likes"><i class="far fa-thumbs-up"></i></a></li>
+                <li><a href="#" title="Login"><i class="fas fa-sign-in-alt"></i></a></li>
             </ul>
         </div>
     </nav>
 </header>
+<aside class="aside">
+    <div class="cart">
+        <div class="cart-header">
+            <button class="close"></button>
+            <h2 class="logo">Your basket</h2>
+        </div>
+        <div class="cart-item> </div>
+        <div class=" show-sidebar
+        ">
+    </div>
 
+    </div>
+    </div>
+</aside>
 <!-- slider -->
-<section class="hero pd-3 d-flex align-items-center">
+<section class=" hero pd-3 d-flex align-items-center">
     <article class="container slider">
         <div class="slides">
             <div class="overflow">
@@ -81,45 +95,45 @@
             <h2>brows our categories</h2>
         </header>
         <!-- carousel -->
-<div class="row">
-    <div class="carousel">
-        <div class="carousel-track">
-            <div class="carousel-item">
-                <a href= "" class="category-item">
-                    <img src="img/2.jpg" height="100" width="250">
-                    <strong class="category-item-title">Clothes</strong>
-                </a>
-            </div>
+        <div class="row">
+            <div class="carousel">
+                <div class="carousel-track">
+                    <div class="carousel-item">
+                        <a href="" class="category-item">
+                            <img src="img/2.jpg" height="100" width="250">
+                            <strong class="category-item-title">Clothes</strong>
+                        </a>
+                    </div>
 
-            <div class="carousel-item">
-                <img src="img/2.jpg" height="100" width="250">
-            </div>
+                    <div class="carousel-item">
+                        <img src="img/2.jpg" height="100" width="250">
+                    </div>
 
-            <div class="carousel-item">
-                <img src="img/2.jpg" height="100" width="250">
-            </div>
+                    <div class="carousel-item">
+                        <img src="img/2.jpg" height="100" width="250">
+                    </div>
 
-            <div class="carousel-item">
-                <img src="img/2.jpg" height="100" width="250">
-            </div>
-            <div class="carousel-item">
-                <img src="img/2.jpg" height="100" width="250">
-            </div>
+                    <div class="carousel-item">
+                        <img src="img/2.jpg" height="100" width="250">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/2.jpg" height="100" width="250">
+                    </div>
 
-            <div class="carousel-item">
-                <img src="img/2.jpg" height="100" width="250">
-            </div>
+                    <div class="carousel-item">
+                        <img src="img/2.jpg" height="100" width="250">
+                    </div>
 
-            <div class="carousel-item">
-                <img src="img/2.jpg" height="100" width="250">
-            </div>
+                    <div class="carousel-item">
+                        <img src="img/2.jpg" height="100" width="250">
+                    </div>
 
-            <div class="carousel-item">
-                <img src="img/2.jpg" height="100" width="250">
+                    <div class="carousel-item">
+                        <img src="img/2.jpg" height="100" width="250">
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
 
     </section>
 
@@ -249,33 +263,109 @@
                     <p class="text-muted">$17</p>
                 </div>
 
+                <div class="product col col-3 text-center">
+                    <div class="text-center">
+                        <img src="img/2.jpg" class="img-fluid">
+                        <div>
+                            <ul class="list-inline">
+                                <li class="list-inline-item">
+                                    <a href="" class="bnt btn-sm"><i class="far fa-thumbs-up"></i></a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="" class="bnt btn-sm"><i
+                                            class="fas fa-cart-arrow-down"></i></a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="" class="bnt btn-sm"><i class="fas fa-expand"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <h3>Test product</h3>
+                    <p class="text-muted">$17</p>
+                </div>
+
+                <div class="product col col-3 text-center">
+                    <div class="text-center">
+                        <img src="img/2.jpg" class="img-fluid">
+                        <div>
+                            <ul class="list-inline">
+                                <li class="list-inline-item">
+                                    <a href="" class="bnt btn-sm"><i class="far fa-thumbs-up"></i></a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="" class="bnt btn-sm"><i
+                                            class="fas fa-cart-arrow-down"></i></a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="" class="bnt btn-sm"><i class="fas fa-expand"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <h3>Test product</h3>
+                    <p class="text-muted">$17</p>
+                </div>
+
+                <div class="product col col-3 text-center">
+                    <div class="text-center">
+                        <img src="img/2.jpg" class="img-fluid">
+                        <div>
+                            <ul class="list-inline">
+                                <li class="list-inline-item">
+                                    <a href="" class="bnt btn-sm"><i class="far fa-thumbs-up"></i></a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="" class="bnt btn-sm"><i
+                                            class="fas fa-cart-arrow-down"></i></a>
+                                </li>
+                                <li class="list-inline-item">
+                                    <a href="" class="bnt btn-sm"><i class="fas fa-expand"></i></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <h3>Test product</h3>
+                    <p class="text-muted">$17</p>
+                </div>
+
 
             </div>
         </header>
     </section>
 
+    <section class="hero">
+        <article>
+            <header>
+                <p>Promo Text</p>
+                <h1>Slogan</h1>
+                <a class="btn btn-dark">Browse collection</a>
+            </header>
+        </article>
+    </section>
+
     <!-- servises -->
     <section class="py-5 bg-gray">
         <div class="row">
-            <div class="col-4 float-left">
-                <header>
-                    <i class="far fa-heard"></i>
+            <div class="col col-4">
+                <header class="text-center">
+                    <i class="far fa-heart"></i>
                     <h2>Free shipping</h2>
                     <p>Free shipping worldwide</p>
                 </header>
             </div>
 
-            <div class="col-4 float-left">
-                <header>
-                    <i class="far fa-heard"></i>
+            <div class="col col-4">
+                <header class="text-center">
+                    <i class="far fa-heart"></i>
                     <h2>Free shipping</h2>
                     <p>Free shipping worldwide</p>
                 </header>
             </div>
 
-            <div class="col-4 float-right">
-                <header>
-                    <i class="far fa-heard"></i>
+            <div class="col col-4">
+                <header class="text-center">
+                    <i class="far fa-heart"></i>
                     <h2>Free shipping</h2>
                     <p>Free shipping worldwide</p>
                 </header>
@@ -285,28 +375,73 @@
     </section>
     <div class="clearfix"></div>
 
-    <!-- subscibe -->
-    <section>
-        <header>
-
-        </header>
-    </section>
 </div>
+
+<section class="hero">
+    <article>
+        <header>
+            <p>Promo Text</p>
+            <h1>Slogan</h1>
+            <a class="btn btn-dark">Browse collection</a>
+        </header>
+    </article>
+</section>
+
 
 <!-- footer -->
 <footer class="footer">
     <div class="container py-4">
         <div class="row py-5">
-            <div class=""></div>
+            <div class="col col-4 mb-3">
+                <h3>Service</h3>
+                <ul class="list-unstyled">
+                    <li class="footer-link">Help</li>
+                    <li class="footer-link">Help</li>
+                    <li class="footer-link">Help</li>
+                    <li class="footer-link">Help</li>
+                    <li class="footer-link">Help</li>
+                </ul>
+            </div>
 
-            <div class="col col-6"></div>
-            <p>&COPY;2020 All rights reserved.</p>
+            <div class="col col-4 mb-3">
+                <h3>Company</h3>
+                <ul class="list-unstyled">
+                    <li class="footer-link">What we do</li>
+                    <li class="footer-link">Help</li>
+                    <li class="footer-link">Help</li>
+                    <li class="footer-link">Help</li>
+                    <li class="footer-link">Help</li>
+                </ul>
+            </div>
+
+            <div class="col col-4">
+                <h3>Social Media</h3>
+                <ul class="list-unstyled">
+                    <li class="footer-link"><i class="fab fa-instagram"></i>Instagram</li>
+                    <li class="footer-link"><i class="fab fa-facebook">Facebook</i></li>
+                    <li class="footer-link"><i class="fab fa-twitter">Twitter</i></li>
+                    <li class="footer-link"><i class="fab fa-tiktok">Tiktok</i></li>
+                    <li class="footer-link"><i class="fab fa-google-plus">Google</i></li>
+                    <li class="footer-link"><i class="fab fa-linkedin">Linkedin</i></li>
+                </ul>
+            </div>
+
+            <div class="border-top pt-4 row">
+                <div class="col col-6">
+                    <p>&COPY;2021 All rights reserved.</p>
+                </div>
+                <div class="col col-6">
+                    <p>&COPY;2021 All rights reserved.</p>
+                </div>
+
+            </div>
         </div>
     </div>
-    </div>
 </footer>
+</aside>
 
-
+<!--    <script src="js/app.js"></script>-->
+<script src="js/product.js"></script>
 
 </body>
 </html>
