--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href=""><span class="text-dark text-uppercase font-weight-bold">My Store</span></a>
             </div>
 
-            <ul class="navbar-nav">
+            <ul class="navbar-nav brackets">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="catalog.html">Shop</a></li>
                 <li><a href="about.html">About</a></li>
@@ -58,13 +58,16 @@
                 <div class="items">
                     <article class="slide">
                         <img src="img/2.jpg">
+
                         <div class="row px-4 px-lg-6">
                             <div class="col-lg-6 text-slide">
-                                <p class="text-uppercase">Promo Text</p>
+                                <p class="text-uppercase">New 2021</p>
                                 <h1 class="text-uppercase">20% off on new season</h1>
-                                <a class="btn btn-dark">Browse collection</a>
+                                <a class="btn btn-browse">Browse collection</a>
                             </div>
                         </div>
+
+
                     </article>
 
                     <article class="slide">
@@ -155,7 +158,7 @@
                             <a href="#" class="d-block">
                                 <img src="img/2.jpg" class="img-fluid w-100">
                             </a>
-                            <div class="text-center">
+                            <div class="text-center product-overlay">
                                 <ul class="list-inline">
                                     <li class="list-inline-item">
                                         <a href="" class="bnt btn-sm">
@@ -163,8 +166,8 @@
                                         </a>
                                     </li>
                                     <li class="list-inline-item">
-                                        <a href="" class="bnt btn-sm">
-                                            <i class="fas fa-cart-arrow-down"></i>
+                                        <a href="" class="bnt btn-dark btn-sm">
+                                            <i class="fas fa-cart-arrow-down">Add to cart</i>
                                         </a>
                                     </li>
                                     <li class="list-inline-item">
@@ -186,7 +189,7 @@
                             <a href="#" class="d-block">
                                 <img src="img/2.jpg" class="img-fluid w-100">
                             </a>
-                            <div class="text-center">
+                            <div class="text-center product-overlay">
                                 <ul class="list-inline">
                                     <li class="list-inline-item">
                                         <a href="" class="bnt btn-sm">
@@ -194,8 +197,8 @@
                                         </a>
                                     </li>
                                     <li class="list-inline-item">
-                                        <a href="" class="bnt btn-sm">
-                                            <i class="fas fa-cart-arrow-down"></i>
+                                        <a href="" class="bnt btn-dark btn-sm">
+                                            <i class="fas fa-cart-arrow-down">Add to cart</i>
                                         </a>
                                     </li>
                                     <li class="list-inline-item">
@@ -217,7 +220,7 @@
                             <a href="#" class="d-block">
                                 <img src="img/2.jpg" class="img-fluid w-100">
                             </a>
-                            <div class="text-center">
+                            <div class="text-center product-overlay">
                                 <ul class="list-inline">
                                     <li class="list-inline-item">
                                         <a href="" class="bnt btn-sm">
@@ -225,8 +228,8 @@
                                         </a>
                                     </li>
                                     <li class="list-inline-item">
-                                        <a href="" class="bnt btn-sm">
-                                            <i class="fas fa-cart-arrow-down"></i>
+                                        <a href="" class="bnt btn-dark btn-sm">
+                                            <i class="fas fa-cart-arrow-down">Add to cart</i>
                                         </a>
                                     </li>
                                     <li class="list-inline-item">
@@ -248,7 +251,7 @@
                             <a href="#" class="d-block">
                                 <img src="img/2.jpg" class="img-fluid w-100">
                             </a>
-                            <div class="text-center">
+                            <div class="text-center product-overlay">
                                 <ul class="list-inline">
                                     <li class="list-inline-item">
                                         <a href="" class="bnt btn-sm">
@@ -256,8 +259,8 @@
                                         </a>
                                     </li>
                                     <li class="list-inline-item">
-                                        <a href="" class="bnt btn-sm">
-                                            <i class="fas fa-cart-arrow-down"></i>
+                                        <a href="" class="bnt btn-dark btn-sm">
+                                            <i class="fas fa-cart-arrow-down">Add to cart</i>
                                         </a>
                                     </li>
                                     <li class="list-inline-item">
@@ -279,7 +282,7 @@
                             <a href="#" class="d-block">
                                 <img src="img/2.jpg" class="img-fluid w-100">
                             </a>
-                            <div class="text-center">
+                            <div class="text-center product-overlay">
                                 <ul class="list-inline">
                                     <li class="list-inline-item">
                                         <a href="" class="bnt btn-sm">
@@ -287,8 +290,8 @@
                                         </a>
                                     </li>
                                     <li class="list-inline-item">
-                                        <a href="" class="bnt btn-sm">
-                                            <i class="fas fa-cart-arrow-down"></i>
+                                        <a href="" class="bnt btn-dark btn-sm">
+                                            <i class="fas fa-cart-arrow-down">Add to cart</i>
                                         </a>
                                     </li>
                                     <li class="list-inline-item">
@@ -310,7 +313,7 @@
                             <a href="#" class="d-block">
                                 <img src="img/2.jpg" class="img-fluid w-100">
                             </a>
-                            <div class="text-center">
+                            <div class="text-center product-overlay">
                                 <ul class="list-inline">
                                     <li class="list-inline-item">
                                         <a href="" class="bnt btn-sm">
@@ -318,8 +321,8 @@
                                         </a>
                                     </li>
                                     <li class="list-inline-item">
-                                        <a href="" class="bnt btn-sm">
-                                            <i class="fas fa-cart-arrow-down"></i>
+                                        <a href="" class="bnt btn-dark btn-sm">
+                                            <i class="fas fa-cart-arrow-down">Add to cart</i>
                                         </a>
                                     </li>
                                     <li class="list-inline-item">
@@ -341,7 +344,7 @@
                             <a href="#" class="d-block">
                                 <img src="img/2.jpg" class="img-fluid w-100">
                             </a>
-                            <div class="text-center">
+                            <div class="text-center product-overlay">
                                 <ul class="list-inline">
                                     <li class="list-inline-item">
                                         <a href="" class="bnt btn-sm">
@@ -349,8 +352,8 @@
                                         </a>
                                     </li>
                                     <li class="list-inline-item">
-                                        <a href="" class="bnt btn-sm">
-                                            <i class="fas fa-cart-arrow-down"></i>
+                                        <a href="" class="bnt btn-dark btn-sm">
+                                            <i class="fas fa-cart-arrow-down">Add to cart</i>
                                         </a>
                                     </li>
                                     <li class="list-inline-item">
@@ -372,7 +375,7 @@
                             <a href="#" class="d-block">
                                 <img src="img/2.jpg" class="img-fluid w-100">
                             </a>
-                            <div class="text-center">
+                            <div class="text-center product-overlay">
                                 <ul class="list-inline">
                                     <li class="list-inline-item">
                                         <a href="" class="bnt btn-sm">
@@ -380,8 +383,8 @@
                                         </a>
                                     </li>
                                     <li class="list-inline-item">
-                                        <a href="" class="bnt btn-sm">
-                                            <i class="fas fa-cart-arrow-down"></i>
+                                        <a href="" class="bnt btn-dark btn-sm">
+                                            <i class="fas fa-cart-arrow-down">Add to cart</i>
                                         </a>
                                     </li>
                                     <li class="list-inline-item">
@@ -445,7 +448,7 @@
 
 </div>
 
-<section class="hero">
+<section class="over-footer lg-gold">
     <article>
         <header>
             <p>Promo Text</p>
@@ -485,12 +488,12 @@
             <div class="col col-md-4">
                 <h3>Social Media</h3>
                 <ul class="list-unstyled">
-                    <li class="footer-link"><i class="fab fa-instagram"></i>Instagram</li>
-                    <li class="footer-link"><i class="fab fa-facebook">Facebook</i></li>
-                    <li class="footer-link"><i class="fab fa-twitter">Twitter</i></li>
-                    <li class="footer-link"><i class="fab fa-tiktok">Tiktok</i></li>
-                    <li class="footer-link"><i class="fab fa-google-plus">Google</i></li>
-                    <li class="footer-link"><i class="fab fa-linkedin">Linkedin</i></li>
+                    <li class="footer-link social-instagram"><i class="fab fa-instagram"></i>Instagram</li>
+                    <li class="footer-link social-facebook"><i class="fab fa-facebook">Facebook</i></li>
+                    <li class="footer-link social-twitter"><i class="fab fa-twitter">Twitter</i></li>
+                    <li class="footer-link social-tiktok"><i class="fab fa-tiktok">Tiktok</i></li>
+                    <li class="footer-link social-google"><i class="fab fa-google-plus">Google</i></li>
+                    <li class="footer-link social-linkedin"><i class="fab fa-linkedin">Linkedin</i></li>
                 </ul>
             </div>
 
